--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2> HTML forms</h2>
 
 <center>
-<form target="_blank" action="https://docs.google.com/forms/d/e/1FAIpQLSe5RJWmaSdCtQ7bFRsiqnG_4ak_i2JeNIEjCqKFFLpJDfo_5w/formResponse" action="https://www.youtube.com/results?search_query=How+to+Submit+Custom+HTML+Form+Data+to+Google+Spread+Sheets+Use+Google+Drive+as+Database"  target="_self" method="POST">
+<form action="https://docs.google.com/forms/d/e/1FAIpQLSe5RJWmaSdCtQ7bFRsiqnG_4ak_i2JeNIEjCqKFFLpJDfo_5w/formResponse" target="_self" method="POST">
 	First name:<br>
 	<input type="text" name="entry.271361895">
 	<br>
